// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept valid events only 1`] = `"Invalid stream event \\"done\\""`;

exports[`should accept valid events only 2`] = `"Invalid stream event \\"value\\""`;

exports[`should ignore comments 1`] = `
Array [
  Object {
    "data": Object {
      "iAm": "data",
    },
    "event": "next",
    "id": "",
  },
]
`;

exports[`should parse chunked message 1`] = `
Array [
  Object {
    "data": Object {
      "iAm": "data",
    },
    "event": "next",
    "id": "1",
  },
]
`;

exports[`should parse message whose lines are separated by \\r\\n 1`] = `
Array [
  Object {
    "data": Object {
      "iAm": "data",
    },
    "event": "next",
    "id": "1",
  },
]
`;

exports[`should parse multiple messages from one chunk 1`] = `
Array [
  Object {
    "data": Object {},
    "event": "next",
    "id": "1",
  },
  Object {
    "data": Object {
      "no": "data",
    },
    "event": "next",
    "id": "2",
  },
]
`;

exports[`should parse multiple messages from one chunk 2`] = `
Array [
  Object {
    "data": Object {
      "almost": "done",
    },
    "event": "next",
    "id": "3",
  },
  Object {
    "data": Object {},
    "event": "complete",
    "id": "4",
  },
]
`;

exports[`should parse whole message 1`] = `
Array [
  Object {
    "data": Object {
      "iAm": "data",
    },
    "event": "next",
    "id": "1",
  },
]
`;

exports[`should parse whole message 2`] = `
Array [
  Object {
    "data": Object {
      "iAm": "data",
    },
    "event": "next",
    "id": "1",
  },
]
`;

exports[`should parse whole message 3`] = `
Array [
  Object {
    "data": null,
    "event": "complete",
    "id": "",
  },
]
`;
